fixes background contrast

--- a/src/Components/card.module.scss
+++ b/src/Components/card.module.scss
@@ -1,14 +1,34 @@
-
 .cardContainer {
+  // opacity: 0.9;
+  filter: brightness(85%);
+  border-radius: 10px;
+  width: 250px;
+  margin: 5px;
+  height: 250px;
+  flex: 0 1 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 8px;
+}
 
-    border-radius: 10px;
-    width:200px;
-    margin: 5px;
-    height:200px;
-    flex: 0 1 250px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 5px;
+.underline {
+  width: 15px;
+  height: 2px;
+  background: white;
+}
 
+.cityData {
+  z-index: 1;
+  height: 100%;
+  color:white;
+  position: absolute;
+  padding: 15px;
+  // background-color: aqua;
+  display: flex;
+  flex-direction: column;
+  // align-content: space-between;
+  justify-content: space-between;
+  // align-items: center;
+  position: absolute;
 }
